# ocr-invoice-reader

./: .dockerignore  .gitignore  APPLY_IMPROVEMENTS.md  AUTO_SETUP_GUIDE.md  AUTO_SETUP_SUMMARY.md  CHANGELOG.md  CHANGES_v2.2.md  CODE_REVIEW_FIXES.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  COMPLETE_FEATURE_SUMMARY.md  CPU_ACCELERATION_GUIDE.md  CPU_ACCELERATION_SUMMARY.md  CSV_OUTPUT_GUIDE.md  CUSTOMS_EXTRACTION_GUIDE.md  DATABASE_IMPORT_GUIDE.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCEMENTS_README.md  EXTRACTOR_V2_IMPROVEMENTS.md  FINAL_CONFIGURATION.md  FINAL_SUMMARY.md  FIX_LLM_ANALYSIS.md  FIX_OCR_SPACES.md  GITHUB_UPDATE_SUMMARY.md  GLOVIA_INVOICE_EXTRACTION.md  GPU_SETUP_GUIDE.md  IMPROVEMENTS.md  INVOICE_EXTRACTION.md  LICENSE  LLM_HYBRID_EXTRACTION.md  LLM_INTEGRATION_GUIDE.md  LLM_INTEGRATION_SUMMARY.md  LLM_MODEL_COMPARISON.md  LLM_OUTPUT_STRUCTURE.md  MANIFEST.in  MODEL_UPGRADE_SUMMARY.md  MODEL_UPGRADE_TO_3B.md  NEW_FEATURES.md  (+59 more)
docs/: API_USAGE.md  ARCHITECTURE.md  COMPLETE_GUIDE.md  DOCUMENT_EXTRACTION_GUIDE.md  ENHANCEMENT_PROPOSAL.md  LLM_OUTPUT_FORMAT.md  OLLAMA_GPU_SETUP.md  PP_STRUCTURE_OPTIMIZATION.md  PROJECT_RESTRUCTURE.md  QUICKSTART_API_CSV.md  QUICK_START_GUIDE.md  QWEN_DIRECT_SETUP.md  README_EXTRACTION.md  RELEASE_NOTES_v4.0.md
docs/archive/: PERFORMANCE.md  README.md  SOLUTION_SUMMARY.md
docs/deployment/: DEPLOYMENT_SUCCESS.md  DEPLOYMENT_TEST_REPORT.md  (+2 more)
examples/: api_client_example.py  csv_export_example.py  enhanced_extraction_example.py
fonts/: README.md
guides/: GLOVIA_INVOICE_EXTRACTION.md  LLM_HYBRID_EXTRACTION.md  PARALLEL_PROCESSING.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_TIPS.md  QUICK_START_HYBRID.md
ocr_invoice_reader/: __init__.py  __main__.py
scripts/: extract_invoices.py  fix_ollama_gpu.sh  fix_paddle_gpu.sh  install.sh  migrate_to_qwen_direct.sh
test_output/: batch.csv  items.csv  summary.csv
tests/: test_csv_export.py  test_llm_factory.py
(+185 files in other folders)
